Added scoring, fixed collapsing, and changed colors

--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
     <head>
         <meta charset="utf-8">
         <title>Valokoodari - Tetris</title>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed">
     </head>
     <body style="background: #202020">
         <div style="width: 100%; text-align: center;">
             <canvas id="tetrisCanvas" width="400" height="800" style="display: inline;"></canvas>
+            <canvas id="scoreCanvas" width="100" height="100" styel="display: inline"></canvas>
         </div>
         <script src="game.js"></script>
     </body>
