--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body style="background: #202020">
         <div style="width: 100%; text-align: center;">
             <canvas id="tetrisCanvas" width="400" height="800" style="display: inline;"></canvas>
-            <canvas id="scoreCanvas" width="100" height="100" styel="display: inline"></canvas>
+            <canvas id="sideCanvas" width="200" height="160" style="display: inline"></canvas>
         </div>
         <script src="game.js"></script>
     </body>
