--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
         <title>Valokoodari - Tetris</title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed">
     </head>
-    <body style="background: #202020">
+    <body style="background: #202020; color: #FFFFFF; font: 'Roboto', sans-serif">
         <div style="width: 100%; text-align: center;">
             <canvas id="tetrisCanvas" width="400" height="800" style="display: inline;"></canvas>
             <canvas id="sideCanvas" width="200" height="160" style="display: inline"></canvas>
+            <p>Control the falling block with arrow keys or wasd.</p>
+            <p>Esc - Pause</p>
+            <p>R - Restart</p>
         </div>
         <script src="game.js"></script>
     </body>
