Improved instructions and README.md

--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
         <div style="width: 100%; text-align: center;">
             <canvas id="tetrisCanvas" width="400" height="800" style="display: inline;"></canvas>
             <canvas id="sideCanvas" width="200" height="160" style="display: inline"></canvas>
-            <p>Control the falling block with arrow keys or wasd.</p>
+            <p>Left or A - Move left</p>
+            <p>Right or D - Move right</p>
+            <p>Down or S - Hard Drop</p>
+            <p>Up or W - Rotate</p>
             <p>Esc - Pause</p>
-            <p>R - Restart</p>
+            <p>R - Reset</p>
         </div>
         <script src="game.js"></script>
     </body>
