Moved Tetromino and Vec2 to their own files to make the code cleaner.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
                 <div>
             </div>
         </div>
+        <script src="vec2.js"></script>
+        <script src="tetromino.js"></script>
         <script src="game.js"></script>
     </body>
 </html>
