Fixed the pause button for mobile users.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                 <canvas id="tetrisCanvas" width="400" height="800" style="display: inline-block; vertical-align: top"></canvas>
                 <canvas id="sideCanvas" width="200" height="800" style="display: inline-block; vertical-align: top"></canvas>
                 <div>
-                    <button onclick="paused = true" style="padding: 15px 32px;">Pause</button> 
+                    <button onclick="togglePause()" style="padding: 15px 32px;">Pause</button> 
                     <button onclick="active.rotate()" style="padding: 15px 30px;">Rotate</button> 
                     <button onclick="reset()" style="padding: 15px 32px;">Reset</button>
                 </div>
