Cleaning up the code.

--- a/index.html
+++ b/index.html
@@ -35,5 +35,6 @@
         <script src="playfield.js"></script>
         <script src="tetromino.js"></script>
         <script src="game.js"></script>
+        <script src="main.js"></script>
     </body>
 </html>
