Fixed hard drop and added soft drop.

--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
                 <div width="200">
                     <p>Left or A - Move left</p>
                     <p>Right or D - Move right</p>
-                    <p>Down or S - Hard Drop</p>
+                    <p>Down or S - Soft Drop</p>
                     <p>Up or W - Rotate</p>
+                    <p>Space - Hard Drop</p>
                     <p>Esc - Pause</p>
                     <p>R - Reset</p>
                 <div>
